--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 </head>
 <body>
   <noscript>This page requires JavaScript and p5.js to render the visualization.</noscript>
-  <div id="credit">Radial spikes show total photo counts for each cat body position; click on a body position category to see a grid of the average colors of the photos in that group.</div>
+  <div id="credit">Radial spikes show total photo counts for each cat body position; click on a cat body position to see a grid of the average colors of the photos in that group.</div>
 </body>
 </html>
